Correction du contraste

--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ button {
 	outline: none !important;
 }
 
+a {
+	color: #ffffff !important;
+}
+
 a:hover {
 	text-decoration: none;
 	cursor: pointer;
@@ -100,7 +104,7 @@ a:hover {
 }
 
 .d-bloc {
-	color: rgba(255, 255, 255, 0.7);
+	color: #c1c1c1;
 }
 
 .d-bloc button:hover {
@@ -123,7 +127,6 @@ a:hover {
 .d-bloc .navbar a,
 .d-bloc .navbar-brand,
 .d-bloc a .icon-sm,
-.d-bloc a .icon-md,
 .d-bloc a .icon-lg,
 .d-bloc a .icon-xl,
 .d-bloc h1 a,
@@ -479,6 +482,11 @@ button {
 
 .icon-md {
 	font-size: 30px !important;
+	color: #c1c1c1 !important;
+}
+
+.icon-md:hover {
+	color: #ffffff !important;
 }
 
 .icon-lg {
@@ -658,6 +666,14 @@ cite {
 	color: #575757 !important;
 }
 
+footer a {
+	color: #ffffff !important;
+}
+
+footer a:hover {
+	color: #c1c1c1 !important;
+}
+
 .container {
 	max-width: 1000px;
 }
@@ -683,6 +699,7 @@ cite {
 p {
 	font-size: 11px;
 }
+
 blockquote {
 	margin-bottom: 0;
 	margin-inline-start: 40px;
@@ -772,7 +789,7 @@ h4 {
 }
 
 .black-background {
-	background-color: rgba(165, 147, 99, 0.7);
+	background-color: rgba(51, 51, 51, 0.7);
 	padding: 40px 40px 40px 40px;
 }
 
@@ -790,7 +807,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-	background-color: #f3976c;
+	background-color: #333333;
 }
 
 .tc-white {
@@ -798,12 +815,12 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-	background: #f3976c;
+	background: #d87c51;
 	color: #ffffff !important;
 }
 
 .btn-atomic-tangerine:hover {
-	background: #c27956 !important;
+	background: #983c11 !important;
 	color: #ffffff !important;
 }
 
@@ -816,11 +833,11 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-	color: #f3976c !important;
+	color: #d87c51 !important;
 }
 
 .ltc-atomic-tangerine:hover {
-	color: #c27956 !important;
+	color: #983c11 !important;
 }
 
 .icon-dark-slate-blue {
